<resources>
    <string name="app_name">Calculator</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="aboutText">Hey, this is my calculator app! You can choose between a simple mode for basic calculations and an advanced mode for more complex operations. I hope you find it useful—enjoy!</string>
    <string name="aboutTitle">About</string>
    <string name="author">Krystian Juszczyk</string>
    <string name="error">Coś poszło nie tak :(</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="displayResult">Calculating…</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="index">245830</string>
    <string name="decimal_zero_format">0.</string>
    <string name="add_zero_decimal_format">%s0.</string>
    <string name="sqrt">sqrt</string>
    <string name="Ln">ln</string>
    <string name="Tan">tan</string>
    <string name="Cos">cos</string>
    <string name="Sin">sin</string>
    <string name="power">x^2</string>
    <string name="powerY">x^y</string>
    <string name="ln">log</string>
    <string name="log">log10</string>
    <string name="function_format">%1$s(</string>
    <string name="result_preview_format">%1$s(0)</string>
    <string name="close_parenthesis">)</string>
    <string name="error_message">Coś poszło nie tak :(</string>

</resources>