<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/simpleCalcButton"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/simpleCalcButton"
        style="@style/MenuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simple"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/appHeader"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/advancedCalcButton"
        style="@style/MenuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/advanced"
        android:textColor="@color/lime"
        android:textSize="25sp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/simpleCalcButton"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/aboutButton"
        style="@style/MenuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/advancedCalcButton"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/exitButton"
        style="@style/MenuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@+id/aboutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
